# Ari

./: .clang-format  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.am  README.md  configure.ac  jsbuild  macpb  package.json  scansrc  shigure  shigure.assets  tsconfig.json  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js  winfix
.github/workflows/: build.yml  codeql.yml  format.yml  manage.yml
assets/: aria2c.prog
assets/brain/: Home.a2s  Main.a2s
assets/brain/Account/: NewAccount.a2s  NewLocal.a2s  NewMS.a2s  NewYgg.a2s
assets/brain/Guide/: AddAccount.a2s  AddGame.a2s  Beginning.a2s  JRECheck.a2s
assets/brain/Launch/: ChooseProfile.a2s  LaunchGame.a2s
assets/brain/ModManage/: ModIndex.a2s  SelectMods.a2s
docs/: Build.md  README-CN.md  README-TW.md
inc/: base64.hh  cJSON.h  httplib.h  log.hh  lurl.hpp  miniz.h  uuid.h  uv.h  webview.h  wv.hh  zip.h
inc/ach/extra/: AutoJVM.hh
inc/ach/sys/: Init.hh  Options.hh  Schedule.hh  Storage.hh
inc/ach/uic/: Brain.hh  Protocol.hh  SysCall.hh  UIFrame.hh  UserData.hh
inc/ach/util/: Commons.hh  Exception.hh  Proc.hh
libs/: uv.lib
src/: Main.cc
src/core/auth/: LocalAuth.cc  MSAuth.cc  YggAuth.cc
src/core/auto/: AutoForge.cc  AutoLoader.cc
src/core/box/: Box.cc
src/extra/: AutoJVM.cc
src/libimpl/: base64.cc  httplib.cc  lurl.cc  zip.c
src/sys/: Init.cc  Options.cc  Schedule.cc  Storage.cc
src/uic/: App.tsx  Brain.cc  ModrinthTweak.ts  Protocol.cc  Protocol.d.ts  Protocol.js  SysCall.cc  UIFrame.cc  UserData.cc
src/util/: Commons.cc  Exception.cc  Proc.cc
(+103 files in other folders)
